--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,39 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="title" content="Derar Sattouf | Software Developer">
+  <meta name="description" content="Full stack web developer & mobile apps developer">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://derar.me/">
+  <meta name="author" content="Derar Sattouf | Software Developer">
+  <meta property="og:site_name" content="Derar Sattouf" />
+  <meta property="og:title" content="Derar Sattouf | Software Developer">
+  <meta property="og:description" content="Full stack web developer & mobile apps developer">
+  <meta property="og:image" content="https://derar.me/derar-sattouf.png">
+  <meta name="image" property="og:image" content="https://derar.me/derar-sattouf.png">
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://derar.me/">
+  <meta property="twitter:title" content="Derar Sattouf | Software Developer">
+  <meta property="twitter:description" content="Full stack web developer & mobile apps developer">
+  <meta property="twitter:image" content="https://derar.me/derar-sattouf.png">
+  <link rel="canonical" href="https://derar.me/" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="description" content="Full stack web developer & mobile apps developer">
+  <meta name="robots" content="index, follow, archive">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title>Derar Sattouf | Software Developer</title>
+
+</head>
+
+<body>
+  <noscript>
+    <strong>Who disable javaScript theses days !!</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
